modulo4/ex003/mq003/styles/style.css
* {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  width: 100vw;
  height: 100vh;
}

body {
  background-color: lightgray;
  padding-bottom: 35px;
}

header {
  background-color: rgba(128, 128, 128, 0.582);
}

h1 {
  text-align: center;
  padding: 10px;
}

#burguer {
  background-color: black;
  color: white;
  display: block;
  text-align: center;
  width: 100vw;
  padding: 8px;
  cursor: pointer;
}

#burguer:hover {
  background-color: white;
  color: black;
}

menu {
  display: none;
}

menu ul {
  list-style-type: none;
}

menu li a {
  display: block;
  text-decoration: none;
  color: white;
  background-color: rgb(66, 66, 66);
  text-align: center;
  padding: 5px;
  margin-top: 1px;
}

menu li a:hover {
  background-color: rgb(124, 123, 123);
  border: 5px 5px 2px rgb(0, 0, 0);
}

main {
  background-color: white;
  border-radius: 10px;
  width: 90vw;
  margin: 10px auto 10px auto;
}

main article h2 {
  margin: 10px;
  padding-top: 10px;
}

main p {
  padding: 10px;
  margin-bottom: 10px;
  text-align: justify;
  text-indent: 15px;
}

@media screen and (min-width: 768px) {
  html {
    width: 100%;
  }

  menu {
    display: block;
  }

  menu ul {
    display: flex;
  }

  menu li a {
    padding: 8px;
    margin-right: 5px;
  }

  #burguer {
    display: none;
  }
}

@media screen and (min-width: 768px) and (max-width: 992px) {
  main {
    width: 75vw;
  }
}

@media screen and (min-width: 992px) and (max-width: 1200px) {
  main {
    width: 65vw;
  }
}

@media screen and (min-width: 1200px) {
  main {
    width: 45vw;
  }
}

